--- a/.helix/config.toml
+++ b/.helix/config.toml
@@ -3,8 +3,9 @@ theme = "catppuccin_mocha"
 
 
 [editor]
+bufferline = "multiple"
 line-number = "relative"
-mouse = false
+# mouse = false
 
 [editor.lsp]
 display-progress-messages = true
@@ -19,9 +20,18 @@ insert = "bar"
 normal = "block"
 select = "underline"
 
+[editor.indent-guides]
+render = true
+character = "╎"
+skip-levels = 1
+
 [editor.file-picker]
 hidden = false
 
-[editor.soft-wrap]
+# [editor.soft-wrap]
 # enable = true
 # wrap-at-text-width = true
+
+[keys.normal]
+C-g = [":new", ":insert-output lazygit", ":buffer-close!", ":redraw"]
+# C-y = [ ':sh rm -f /tmp/yazi-path', ':insert-output yazi %{buffer_name} --chooser-file=/tmp/yazi-path', ":open %sh{/bin/cat /tmp/yazi-path}", ":redraw" ]
